--- a/crossing-data-analysis-brms.ipynb
+++ b/crossing-data-analysis-brms.ipynb
@@ -990,6 +990,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualise the data split by continent and population"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
@@ -1024,6 +1031,13 @@
    ],
    "source": [
     "ggplot(d, aes(x = cross_type, y = hatch_rate, color = cross_type)) + geom_beeswarm(cex = 3, size = 0.3) + facet_wrap(~pop*continent) + theme(axis.text.x = element_text(size = 3))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the model fits"
    ]
   },
   {
@@ -1147,6 +1161,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Posterior predictive checks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -1203,42 +1224,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“Dropping 'draws_df' class as required metadata was removed.”\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#as_draws_df(b2.2) %>% colnames()\n",
-    "col_pickup <- c('b_Intercept','b_cross_typebothNeg_wCin3','b_cross_typeFMpos_wCer1','b_cross_typeFMpos_wCin3','b_cross_typeFpos_wCer1','b_cross_typeFpos_wCin3','b_cross_typeMpos_wCer1','b_cross_typeMpos_wCin3')\n",
-    "post2.1 <- as_draws_df(b2.1) %>% #select(all_of(col_pickup)) %>% \n",
-    "pivot_longer(col_pickup[2:length(col_pickup)])%>%\n",
-    "  mutate(continent = case_when(\n",
-    "    endsWith(name, \"europe\") ~ \"europe\",\n",
-    "    endsWith(name, \"usa\") ~ \"usa\"\n",
-    "    )) %>%\n",
-    "  mutate(cross_type= case_when(\n",
-    "    startsWith(name, \"b_cross_typebothNeg\") ~ \"bothNeg\",\n",
-    "    startsWith(name, \"b_cross_typeFMpos\") ~ \"FMpos\",\n",
-    "    startsWith(name, \"b_cross_typeFpos\") ~ \"Fpos\",\n",
-    "    startsWith(name, \"b_cross_typeMpos\") ~ \"Mpos\"\n",
-    "    )) %>%\n",
-    "  mutate(strain = case_when(\n",
-    "    grepl(\"*wCer1*\", name) ~ \"wCer1\",\n",
-    "    grepl(\"*wCin3*\", name) ~ \"wCin3\"\n",
-    "  ))\n"
+    "Create a tibble table with draws simulated from the posterior distribution of the parameters"
    ]
   },
   {
@@ -1278,6 +1267,13 @@
     "    grepl(\"*wCer1*\", name) ~ \"wCer1\",\n",
     "    grepl(\"*wCin3*\", name) ~ \"wCin3\"\n",
     "  ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot and visualise the posterior predictive distribution"
    ]
   },
   {
@@ -1321,10 +1317,6 @@
     }
    ],
    "source": [
-    "#post <- as_draws_df(b2.2) %>% select(all_of(col_pickup)) %>% \n",
-    "#pivot_longer(col_pickup) %>% rename(cross_type = name) %>% add_column(data_type = \"simulated\")\n",
-    "#full <- left_join(post, d)\n",
-    "#full\n",
     "ggplot(data = post2.2, aes(x=cross_type, y=inv_logit(value+b_Intercept+b_popsame), fill=cross_type)) +\n",
     "    geom_violin() + \n",
     "    geom_jitter(color=\"black\", size=0.004, alpha=0.03) + #geom_beeswarm(data = d, aes(x=cross_type, y=hatched/egg_tot, size = egg_tot), color = \"red\", cex= 3) +\n",
@@ -1333,6 +1325,13 @@
     "ggplot(data = post2.2, aes(x = inv_logit(value+b_Intercept+b_popsame), color=cross_type)) +\n",
     "  geom_density(lwd = 1.2, linetype = 1, alpha = 0.9) + labs(colour = \"cross type\", x = \"hatch rate\") + facet_wrap(~strain*continent, nrow = 2)\n",
     "  #scale_color_manual(values = cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make contrasts between factors and visualise the distribution of the differences"
    ]
   },
   {
