--- a/crossing-data-analysis-brms.ipynb
+++ b/crossing-data-analysis-brms.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model fitting for the crossing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the required R libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -181,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the general theme for plotting graphs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -203,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Raw data and fitted models are loaded"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -215,13 +243,6 @@
     "setwd(\"~/Documents/post-doc/cingulata/research/crossings/\")\n",
     "#datalist = readRDS(\"modeldatasets.RDS\")\n",
     "datalist = readRDS(\"modeldatasets-usa-europe.RDS\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the models to variables"
    ]
   },
   {
